--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 HSN2 Data-Store (hsn2-data-store)
 
 
-Data Store is a simple database that can store arbitrary binary data.
-Communication is done via simplified REST commands.
+A simple database that can store arbitrary binary data.
+Interaction is possible via a REST interface.
 It is optimized for storing large objects, e.g. files, long lists.
 
 
